--- a/templates/prodottidellaricerca.html
+++ b/templates/prodottidellaricerca.html
@@ -4,6 +4,7 @@
 <div class="container withnavbar">
     <br>
     <div class="row">
+        <div id="content">
         <div class="sidenav">
             <p><b>Indice:</b></p>
             <a href="#zenodo"> Prodotti open-access.</a>
@@ -11,6 +12,9 @@
 
         </div>
         <div class="col-md-7 col-sm-6">
+        
+
+        
         <section id="scopo">
             <br>
             <h1>Prodotti della ricerca</h1>
@@ -86,6 +90,7 @@
                 </div>
             </div>
             </section>
+        </div>
         <div>
     </div>
 </div>
