--- a/static/custom.css
+++ b/static/custom.css
@@ -351,3 +351,9 @@ tr:nth-of-type(odd) {
   width: 100%;
   height: 100%;
 }
+
+abbr[title] {
+  border-bottom: none !important;
+  cursor: inherit !important;
+  text-decoration: none !important;
+}
