Fixed Issue header hierachy

--- a/templates/index2.html
+++ b/templates/index2.html
@@ -64,7 +64,7 @@ window.onload = function(){
       <p>
       Il sito capitolar-e mette a disposizione ad accesso aperto la digitalizzazione di risorse della Biblioteca Capitolare di Verona: un aggiornato catalogo dei manoscritti associato alle riproduzioni dei codici, il catalogo storico dei manoscritti e l’archivio del Capitolo dei canonici e di altri fondi qui conservati.
       <br>
-      <h5><a href="/ricerca">Nuovo catalogo digitale </a> </h5>
+      <p class="h5"><a href="/ricerca">Nuovo catalogo digitale </a> </p>
         Il nuovo catalogo digitale, realizzato secondo i più aggiornati standard scientifici, è il cuore del progetto. 
         La visualizzazione delle riproduzioni ad altissima definizione avviene attraverso le 
         sue schede, che permettono di identificare tutte le unità interne dei codici e di 
@@ -72,14 +72,14 @@ window.onload = function(){
          multispettrali, vengono rese disponibili anche le digitalizzazioni di precedenti 
          campagne di riproduzione.
         <br>
-        <h5><a href="/esplora">Catalogo storico </a></h5>
+        <p class="h5"><a href="/esplora">Catalogo storico </a></p>
         Il catalogo storico mette a disposizione i principali dati identificativi dei 
         manoscritti della Biblioteca Capitolare, così come erano stati descritti da Antonio Spagnolo 
         alla fine del XIX secolo, collegandoli alle loro riproduzioni digitali. Il catalogo
         storico di Spagnolo, assieme alle sue prosecuzioni, è uno strumento che risulta 
         tutt’oggi indispensabile per l’identificazione dei codici.
         <br>
-        <h5><a href="/archivio"> Archivio </a> </h5>
+        <p class="h5"><a href="/archivio"> Archivio </a> </p>
         La digitalizzazione dell’archivio del Capitolo del canonici, basato per ora sulle 
         schede del <a href="http://cdavr.dtesis.univr.it/">Codice digitale degli archivi veronesi</a>, permette di ricercare e 
         visualizzare i documenti qui conservati, risalenti per le pergamene più antiche
@@ -101,7 +101,7 @@ window.onload = function(){
 <section id="formazione" class="about py-5  ">
   <div class="row align-items-center container py-5 mx-auto">
     <div class="text col-lg-6 col-md-12 col-12 ">
-      <h6>FORMAZIONE E DIVULGAZIONE</h6>
+      <p class="h6">FORMAZIONE E DIVULGAZIONE</p>
       <h1>Alta formazione e prodotti della ricerca</h1>
       <p>
         Il progetto dissemina i risultati  e le conoscenze acquisite attraverso diverse modalità per 
@@ -146,7 +146,7 @@ window.onload = function(){
 <section id="vai" class="vari  py-5 bg-white">
   <div class="row align-items-center container py-5 mx-auto">
     <div class="text col-lg-6 col-md-12 col-12">
-      <h6>SUBITO AL CODICE</h6>
+      <p class="h6">SUBITO AL CODICE</p class="h6">
       <h1>Sai già cosa stai cercando?</h1>
       <p>Se sai già la segnatura del codice che stai cercando inseriscila sul
         campo segnatura e vai direttamente al bene che stai studiando! <i>Lege feliciter!</i>
