--- a/templates/about.html
+++ b/templates/about.html
@@ -51,7 +51,7 @@
         <section id="storia" class="storia  py-5 ">
             <div class="row align-items-center container py-5 mx-auto">
             <div class="text col-lg-6 col-md-12 col-12">
-                    <h6>DALLO STUDIO ALLA CONSERVAZIONE</h6>
+                    <p class="h6">DALLO STUDIO ALLA CONSERVAZIONE</p>
                     <h1>Storia del progetto</h1>
                         Il progetto mosse i primi passi nel 2017 a partire da un progetto di ricerca di base finanziato dall’Ateneo di Verona 
                         (DascaBida: Dallo scriptorium carolingio alla biblioteca di Dante) e affidato in collaborazione dal 
@@ -82,7 +82,7 @@
                     <img class="img-fluid" src={{url_for('static',filename='imgs/salaconsult.jpeg')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
                   </div>
                   <div class="text col-lg-6 col-md-12 col-12">
-                    <h6>STUDIARE I CODICI</h6>
+                    <p class="h6">STUDIARE I CODICI</p>
                     <h1>La nuova sala consultazione</h1>
                     <p>
                         I primi, incoraggianti risultati del progetto hanno indotto l’Ateneo, con delibera del Consiglio di Amministrazione del 1 febbraio 2019, a investire ulteriori ingenti risorse per l’acquisto di strumentazione più performante e per assicurare il personale necessario a supporto delle attività di ricerca: il progetto DascabiDa è così confluito nel neonato Laboratorio di studi Medievali e Danteschi (LaMeDan) del Dipartimento di Culture e Civiltà.
@@ -96,7 +96,7 @@
           <section id="convenzione" class="illaboratorio  py-5 ">
             <div class="row align-items-center container py-5 mx-auto bg-white">
                 <div class="text col-lg-6 col-md-12 col-12">
-                    <h6>INSIEME PER SALVAGUARDARE IL PATRIMONIO</h6>
+                    <p class="h6">INSIEME PER SALVAGUARDARE IL PATRIMONIO</p>
                     <h1>La convenzione</h1>
                         <p>
                             L’Università di Verona, in data 19 marzo 2019, ha stipulato con il Capitolo della Cattedrale una <a href=https://www.univrmagazine.it/2019/03/19/firmata-la-convenzione-tra-universita-di-verona-e-biblioteca-capitolare/>convenzione</a> quinquennale che assicura la collaborazione tra 
@@ -118,7 +118,7 @@
                     <img class="img-fluid" src={{url_for('static',filename='imgs/lab_1.jpeg')}} alt="Immagine del laboratorio, e del sistema di digitalizzazione.">   
                   </div>
                   <div class="text col-lg-6 col-md-12 col-12">
-                    <h6>ANALIZZARE E DIGIALIZZARE I CODICI</h6>
+                    <p class="h6">ANALIZZARE E DIGIALIZZARE I CODICI</p>
                     <h1>Il laboratorio</h1>
                         <p>
                         Il laboratorio di analisi dei beni librari è dotato di strumentazione all'avanguardia per l'analisi
