--- a/templates/altaformazione.html
+++ b/templates/altaformazione.html
@@ -42,7 +42,7 @@
             <div class="row align-items-center container py-5 mx-auto">
                 
                 <div class="text col-lg-6 col-md-12 col-12">
-                    <h6>SUMMER SCHOOL</h6>
+                    <p class="h6">SUMMER SCHOOL</p>
                     <h1>Verona International Summer School in Medieval Manuscripts</h1>
                     Nel 2019 e nel 2020 si sono svolte le prime due edizioni di una scuola estiva a vocazione principalmente 
                     internazionale dedicata ai manoscritti tardoantichi e medievali (415-1500) conservati presso 
@@ -73,7 +73,7 @@
                     <img class="img-fluid" src={{url_for('static',filename='imgs/dantesummer.png')}} alt="Immagine della statua di Dante in Piazza dei Signori a Verona.">   
                   </div>
                   <div class="text col-lg-6 col-md-12 col-12">
-                    <h6>SUMMER SCHOOL</h6>
+                    <p class="h6">SUMMER SCHOOL</p>
                     <h1>Scuola estiva internazionale in Studi danteschi </h1>
                     <p>
                         La <a href=https://www.univrmagazine.it/2020/07/03/torna-la-scuola-estiva-internazionale-in-studi-danteschi/>Scuola estiva internazionale in Studi danteschi </a>propone agli 
@@ -99,7 +99,7 @@
               <section id="master" class="illaboratorio  py-5 ">
                 <div class="row align-items-center container py-5 mx-auto">
                       <div class="text col-lg-6 col-md-12 col-12">
-                        <h6>MASTER DI SECONDO LIVELLO</h6>
+                        <p class="h6">MASTER DI SECONDO LIVELLO</p>
                         <h1>Master in Scienze storiche, filologiche e tecnologie fisiche applicate allo studio e la conservazione dei beni culturali</h1>
                         <p>Comitato scientifico: Massimiliano Bassetti, Fabio Coden, Carlo Combi, Claudia Daffara, Paolo de Paolis, Edoardo Ferrarini, Tiziana Franco, Paolo Pellegrini, Maria Clara Rossi, Paolo Scattolin, Arnaldo Soldani, Marco Stoffella</p>
                         <p>
