--- a/templates/media.html
+++ b/templates/media.html
@@ -37,7 +37,7 @@
             <div class="row align-items-center container py-5 mx-auto">
 
             <div class="text col-lg-6 col-md-12 col-12">
-                <h6>SERVIZIO TELEVISIVO</h6>
+                <p class="h6">SERVIZIO TELEVISIVO</p>
                 <h1>Tg2 e Tg2 Dossier</h1>
                 <p>
                     Il progetto è stato illustrato una puntata del Tg2 Dossier dedicata a Dante;
@@ -55,7 +55,7 @@
             <div class="row align-items-center container py-5 mx-auto">
 
                   <div class="text col-lg-6 col-md-12 col-12">
-                    <h6>SERVIZIO TELEVISIVO</h6>
+                    <p class="h6">SERVIZIO TELEVISIVO</p>
                     <h1>TG3 Regione Veneto e Rai News</h1>
                     <p>Il progetto DascaBiDa, all'origine del LaMeDan, nel 2018, ha raccolto l'interesse della stampa come dimostra questo servizio andato in onda sul <a href=https://www.rainews.it/dl/rainews/TGR/media/ven-Verona-Biblioteca-Capitolare-manoscritti-b368a937-a75d-42a3-89b9-3af5bfaf69af.html>TgR Veneto</a>.
                     </p>
@@ -70,7 +70,7 @@
             <div class="row align-items-center container py-5 mx-auto">
 
             <div class="text col-lg-6 col-md-12 col-12">
-                <h6>SERVIZIO TELEVISIVO</h6>
+                <p class="h6">SERVIZIO TELEVISIVO</p>
                 <h1>TelePace</h1>
                 Anche TelePace ha dedicato <a href="https://www.telepace.it/puntate/capitolare-un-laboratorio-per-il-medioevo/">un servizio</a>  all'apertura del primo laboratorio all'interno della Biblioteca Capitolare.
 
