--- a/templates/prodottidellaricerca.html
+++ b/templates/prodottidellaricerca.html
@@ -39,7 +39,7 @@
             <div class="row align-items-center container py-5 mx-auto">
 
             <div class="text col-lg-6 col-md-12 col-12">
-                <h6>ZENODO COMMUNITY</h6>
+                <p class="h6">ZENODO COMMUNITY</p>
                 <h1>Prodotti open-access</h1>
                 <p>
                     Alcuni dei prodotti di ricerca del LaMeDan sono ospitati su <a href="https://about.zenodo.org/">Zenodo</a>. 
@@ -66,7 +66,7 @@
             <div class="row align-items-center container py-5 mx-auto">
 
             <div class="text col-lg-6 col-md-12 col-12">
-                <h6>ZOTERO SHARED LIBRARY</h6>
+                <p class="h6">ZOTERO SHARED LIBRARY</p>
                 <h1>Una bibliografia condivisa</h1>
                 <p>
                 Per poter fare ricerca non serve solo un accesso veloce agli ultimi articoli 
