--- a/templates/includes/carousel.html
+++ b/templates/includes/carousel.html
@@ -7,28 +7,44 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="5000">
+        <picture>
+          <source srcset={{url_for('static',filename='imgs/1.avif')}} type="image/avif">
+          <source srcset={{url_for('static',filename='imgs/1.jpeg')}} type="image/jpeg"> 
         <img src={{url_for('static',filename='imgs/1.jpeg')}} class="d-block w-100" alt="Immagine della sala principale dalla Biblioteca Capitolare.">
+        </picture>
         <div class="carousel-caption d-none d-md-block">
           <h5>La biblioteca Capitolare di Verona.</h5>
           <p>La biblioteca ha un patrimonio di oltre un migliaio di manoscritti alcuni risalenti ai primi secoli dell'era volgare.</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="5000">
+        <picture>
+          <source srcset={{url_for('static',filename='imgs/1b.avif')}} type="image/avif">
+          <source srcset={{url_for('static',filename='imgs/1b.jpeg')}} type="image/jpeg"> 
         <img src={{url_for('static',filename='imgs/1b.jpeg')}} class="d-block w-100" alt="Immagine di un palinsesto.">
+        </picture>
         <div class="carousel-caption d-none d-md-block">
           <h5>Catalogazione avanzata.</h5>
           <p>Un nuovo sistema di catalogazione per descrivere anche i codici più complessi.</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="5000">
+        <picture>
+          <source srcset={{url_for('static',filename='imgs/2.avif')}} type="image/avif">
+          <source srcset={{url_for('static',filename='imgs/2.jpeg')}} type="image/jpeg"> 
         <img src={{url_for('static',filename='imgs/2.jpeg')}} class="d-block w-100" alt="Immagine di un manoscritto digitalizzato ad alta risoluzione.">
+        </picture>
         <div class="carousel-caption d-none d-md-block">
           <h5>Digitalizzazione dei beni librari.</h5>
           <p>Digitalizazioni con camere fino a 100 Mega Pixel, per preservare ogni minimo dettaglio.</p>
         </div>
       </div>
       <div class="carousel-item" data-bs-interval="5000">
+        <picture>
+          <source srcset={{url_for('static',filename='imgs/3.avif')}} type="image/avif">
+          <source srcset={{url_for('static',filename='imgs/3.jpeg')}} type="image/jpeg"> 
         <img src={{url_for('static',filename='imgs/3.jpeg')}} class="d-block w-100" alt="Immagine che mostra una pergamena alla luce visibile e ultravioletta riflessa ed il testo che diventa leggible con quest'ultima.">
+        </picture>
         <div class="carousel-caption d-none d-md-block">
           <h5>Restituire il perduto.</h5>
           <p>Tecniche di imaging avanzato per leggere i testi non più leggibili.</p>
