--- a/templates/risultati2.html
+++ b/templates/risultati2.html
@@ -52,7 +52,7 @@
             <tr><td><b>Carte di guardia: </b></td><td>{{field['carte_di_guardia']}}</td></tr>
             <tr><td><b>Prospetto fascicolazione: </b></td><td>{{field['prospetto_fascicolazione']|safe}}</td></tr>
             <tr><td><b>Arrangiamento dei fogli (regola di Gregory): </b></td><td>{{field['arrangiamento_fogli_gregory']}}</td></tr>
-            <tr><td><b>Dimensioni: </b></td><td>{{field['dimensioni']}}</td></tr>
+            <tr><td><b>Dimensioni: </b></td><td>{{field['dimensioni']}} <a href=/pagelayout?mas={{field['dimensioni'].replace(" ","")}} target="_blank">🔎</a> </td></tr>
             <tr><td><b>Rigatura: </b></td><td>{{field['rigatura']}}</td></tr>
             <tr><td><b>Foratura: </b></td><td>{{field['foratura']}}</td></tr>
             <tr><td><b>Legatura: </b></td><td>{{field['legatura']}}</td></tr>
